--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TopTrumps</string>
     <string name="bet">BET</string>
+    <string name="preference_file_key">bank</string>
 </resources>
